--- a/src/index.css
+++ b/src/index.css
@@ -41,3 +41,9 @@ textarea {
   outline: none;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
+
+@media (max-width: 567px) {
+  #root {
+    max-width: 100%;
+  }
+}
